workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_query_parameters_command__existing_params_result.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: existing_params_result.unwrap_err()
---
Validation(
    "Command failed validation: endpoint must not have existing query parameters to add query parameters, \"AddQueryParameters(AddQueryParameters { query_parameters_id: \\\"query_parameters_2\\\", path_id: \\\"path_1\\\", http_method: \\\"GET\\\" })\"",
)
