workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_query_parameters_command__new_events.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: new_events
---
[
    QueryParametersAdded(
        QueryParametersAdded {
            query_parameters_id: "query_parameters_2",
            http_method: "POST",
            path_id: "path_1",
            event_context: None,
        },
    ),
]
