workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_query_parameters_command__unassignable_id_result.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: unassignable_id_result.unwrap_err()
---
Validation(
    "Command failed validation: query parameters id must be assignable to add query parameters, \"AddQueryParameters(AddQueryParameters { query_parameters_id: \\\"query_parameters_1\\\", path_id: \\\"path_1\\\", http_method: \\\"POST\\\" })\"",
)
